--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,11 +18,7 @@ body {
     --color-warning: #e06c75;
     --color-link: #61afef;
 
-    --color-theme-light-background: #fafafa;
-    --color-theme-light-surface: #e5e5e5;
-    --color-theme-light-text: #383a42;
-
-    --color-theme-dark-background: #282c34;
-    --color-theme-dark-surface: #21252b;
-    --color-theme-dark-text: #abb2bf;
+    --color-theme-background: #282c34;
+    --color-theme-surface: #21252b;
+    --color-theme-text: #abb2bf;
 }
