add contact info reminder, update cv, fix visual bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@ body {
 :root {
     --color-border: #61afef;
     --color-warning: #e06c75;
-    --color-link: #61afef;
+    --color-link: #478bc3;
 
     --color-theme-background: #282c34;
     --color-theme-surface: #21252b;
